--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,8 +42,8 @@ services:
     container_name: db
     image: postgres:14
     restart: always
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
